hphp/hack/test/typecheck/trait_priv_extends3.php.exp
File "trait_priv_extends3.php", line 11, characters 7-7:
Class C does not correctly implement all required methods  (Typing[4110])
File "trait_priv_extends3.php", line 12, characters 7-7:
Some methods are incompatible with those declared in type T
Read the following to see why:
File "trait_priv_extends3.php", line 14, characters 11-13:
Member c has the wrong type
File "trait_priv_extends3.php", line 14, characters 11-13:
Typing error
File "trait_priv_extends3.php", line 8, characters 12-13:
This is an object of type C1
File "trait_priv_extends3.php", line 14, characters 12-13:
It is incompatible with an object of type C2
